# bootcamp-dbt-core

./: README.md
dbt-northwind/: docker-compose.yaml  pyproject.toml
