[project]
name = "dbt-northwind"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael"}
]
requires-python = ">=3.13"
dependencies = [
    "dbt-core (>=1.11.3,<2.0.0)",
    "dbt-postgres (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false